상단 리스트 고정, drop 시 카테고리 별 색상 적용, 여러개 동시 이동 가능

--- a/src/main/resources/static/jquery-sortable-js/st/theme.css
+++ b/src/main/resources/static/jquery-sortable-js/st/theme.css
@@ -252,3 +252,17 @@ input[type=range]:focus::-ms-fill-upper {
 .highlight {
 	background-color: #B7F8C7;
 }
+/*goal-list ghostClass*/
+.goal-background-class {
+    background-color: gray;
+}
+
+/*success-list ghostClass*/
+.success-background-class {
+    background-color: green;
+}
+
+/*fail-list ghostClass*/
+.fail-background-class {
+    background-color: red;
+}
