--- a/src/main/resources/templates/goal-save.mustache
+++ b/src/main/resources/templates/goal-save.mustache
@@ -2,12 +2,23 @@
 <!-- Sortable Assets-->
 
 <link rel="stylesheet" type="text/css" href="/jquery-sortable-js/st/theme.css">
-
-<h1>오늘의 목표</h1><!-- Main component for a primary marketing message or call to action -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+<h1>오늘의 목표</h1>
 
 <div id="simple-list" class="row">
     <h4 class="col-12">Simple list example</h4>
     <div id="example1" class="list-group col">
+        <div class="list-group-item static" style="background:gray;">목표</div>
+        <div class="list-group-item"><input type="text"></div>
+        <div class="list-group-item">Item 2<button type="button" class="btn btn-outline-danger"><i class="bi bi-trash-fill"></i></button></div>
+        <div class="list-group-item">Item 3</div>
+        <div class="list-group-item">Item 4</div>
+        <div class="list-group-item">Item 5</div>
+        <div class="list-group-item">Item 6</div>
+        <div class="">+</div>
+    </div>
+    <div id="example2" class="list-group col">
+        <div class="list-group-item static" style="background:green;">성공</div>
         <div class="list-group-item">Item 1</div>
         <div class="list-group-item">Item 2</div>
         <div class="list-group-item">Item 3</div>
@@ -15,7 +26,8 @@
         <div class="list-group-item">Item 5</div>
         <div class="list-group-item">Item 6</div>
     </div>
-    <div id="example2" class="list-group col">
+    <div id="example3" class="list-group col">
+        <div class="list-group-item static" style="background:red;">실패</div>
         <div class="list-group-item">Item 1</div>
         <div class="list-group-item">Item 2</div>
         <div class="list-group-item">Item 3</div>
