#5 #3 목표 내용 api 기능 추가 및 테스트 수정 버튼 추가

--- a/src/main/resources/templates/goal-save.mustache
+++ b/src/main/resources/templates/goal-save.mustache
@@ -12,7 +12,7 @@
         <div class="list-group-item">
             <input type="text" id="new-goal" placeholder="ex) 8시에 일어나기"/>
                 <div class="list-button">
-                    <button type="button" class="btn btn-outline-success" id="btn-add">
+                    <button type="button" class="btn btn-outline-primary" id="btn-add">
                         <i class="bi bi-plus-lg"></i>
                     </button>
                 </div>
@@ -26,6 +26,9 @@
         </div>
         <div class="list-group-item goal">Item 3
             <div class="list-button">
+                <button type="button" class="btn btn-outline-success edit">
+                    <i class="bi bi-pencil-fill"></i>
+                </button>
                 <button type="button" class="btn btn-outline-danger delete">
                     <i class="bi bi-trash-fill"></i>
                 </button>
